envs/gke/nginx/wazuh-ingress-nginx-controller.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wazuh-ingress-nginx-controller
  namespace: wazuh
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  ingressClassName: nginx
  rules:
  - host: "" # Fill the hostname
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: dashboard
            port:
              number: 443
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: wazuh
            port:
              number: 1515
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: wazuh-workers
            port:
              number: 1514
